--- a/spiderfoot/static/css/spiderfoot.css
+++ b/spiderfoot/static/css/spiderfoot.css
@@ -1,5 +1,11 @@
 body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+  overflow-x: hidden;
+}
+
+#mainbody {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .navbar-brand {
